tests/errors/test_pragma_errors.mob
// Test pragma error handling

// Test unknown pragma
#pragma unknown_pragma value
print("Should not reach here");

